<resources>
    <string name="app_name">DateMate</string>
    <string name="title_home">Home</string>
    <string name="title_group">Group</string>
    <string name="title_followers">Followers</string>
    <string name="title_settings">Settings</string>
    <string name="title_my_page">My Page</string>
    
    <string name="title_onboarding">Welcome to DateMate</string>
    <string name="contents_onboarding">Our neighborhood news in my hand</string>

    <string name="request_permission_location">Please allow the location permission.</string>

    <string name="start">Start</string>

    <string name="login">Sign in</string>
    <string name="login_id">ID</string>
    <string name="login_pw">PW</string>
    <string name="login_fail">Fail login.</string>
    <string name="title_login">Welcome to DateMate</string>

    <string name="title_signup">Is this your first DateMate?</string>
    <string name="title_second_signup">I\'ll help you sign up.</string>
    <string name="sign_up">Sign up</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="nickname">Nick name</string>
    <string name="sign_up_success">Success!</string>
    <string name="sign_up_fali">Fail</string>
    <string name="sign_up_email_explain">Please input your E-Mail.</string>
    <string name="sign_up_id_explain">It can be created within 4~12 characters of English.</string>
    <string name="sign_up_pw_explain">Please mix English and numbers and enter at least 6 characters.</string>
    <string name="sign_up_pw_confirm_success_explain">The password is exactly the same.</string>
    <string name="sign_up_pw_confirm_fail_explain">The password doesn\'t match.</string>
    <string name="sign_up_nickname_explain">Please write a nickname within 2~10 letters.</string>
    <string name="sign_up_name_explain">Please input your name.</string>
    <string name="sign_up_agree_terms">I agree to collect and use personal information.</string>
    <string name="sign_up_show_terms">Personal information processing policy.</string>
    <string name="sign_up_please_agree_terms">Please agree to collect and use personal information.</string>

    <string name="home_info_hello">Hello. %s,</string>
    <string name="home_info_location">The current location is\n%s %s %s.</string>
    <string name="home_info_weather">The current temperature in %s is %d℃.</string>
    <string name="home_not_exist_schedule">There\'s no schedule.</string>

    <string name="add_schedule_title_hint">Enter the title.</string>
    <string name="add_schedule_contents_hint">Enter the content.</string>

    <string name="is_not_exist_group">There\'s no group added.</string>
    <string name="group_create">Create group</string>
    <string name="group_name">Group name</string>
    <string name="group_desc">Group description</string>
    <string name="group_name_explain">Please enter your group name.</string>
    <string name="group_desc_explain">Please enter the group description.</string>
    <string name="create_group_success">Success!</string>
    <string name="create_group_fail">Failed to create group. Please try again.</string>

    <string name="group_space_ranking_title">Possible date</string>
    <string name="group_space_fix_date">Fix date</string>

    <string name="is_not_exist_followers">There\'s no friend added.</string>
    <string name="add_follower">Add friend</string>
    <string name="delete_follower">Delete friend</string>
    <string name="search_follower">Search friend</string>
    <string name="is_not_found_user">There is no corresponding user.</string>
    <string name="can_not_add_self">You can\'t add yourself as a friend.</string>
    <string name="add_follower_success">Success!</string>
    <string name="add_follower_fail">Failed to add friends. Please try again.</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="news_dynamic">%s news</string>

    <string name="time_now">Now</string>
    <string name="time_min_ago">minutes ago</string>
    <string name="time_hours_ago">hours ago</string>

    <string name="send_chat">Send</string>

</resources>