<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_login_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/logo"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.4"/>

    <TextView
        android:id="@+id/logo_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/logo_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="#C88C84"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/logo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/logo_title_text"
        app:layout_constraintBottom_toBottomOf="@id/logo_title_text"
        app:layout_constraintLeft_toRightOf="@id/logo_title_text"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="18sp"
        android:text="@string/title_onboarding"/>

    <EditText
        android:id="@+id/et_login_id"
        android:layout_width="350dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_login_pw"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/custom_edittext"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:hint="@string/login_id"
        app:layout_constraintVertical_chainStyle="packed"/>

    <EditText
        android:id="@+id/et_login_pw"
        android:layout_width="350dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/et_login_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/custom_edittext"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:hint="@string/login_pw" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_login_pw"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/custom_button_background"
        android:text="@string/login"
        app:layout_constraintVertical_chainStyle="packed"
        android:outlineProvider="none"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="18dp"
        android:background="@drawable/custom_button_background"
        android:text="@string/sign_up"
        app:layout_constraintVertical_chainStyle="packed"
        android:outlineProvider="none"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/login_progress_bar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>