<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TimePicker
        android:id="@+id/time_picker_add_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_add_schedule_title"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0"
        android:headerBackground="@color/background_second_color"
        android:numbersSelectorColor="@color/time_picker_selected_color"
        android:numbersTextColor="@color/default_text_color" />

    <EditText
        android:id="@+id/et_add_schedule_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/time_picker_add_schedule"
        app:layout_constraintBottom_toBottomOf="@id/et_add_schedule_contents"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:inputType="text"
        android:hint="@string/add_schedule_title_hint"/>

    <!--divider 추가해야함 -->

    <EditText
        android:id="@+id/et_add_schedule_contents"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/et_add_schedule_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/add_schedule_contents_hint"/>

    <Button
        android:id="@+id/btn_add_schedule"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_add_schedule_contents"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/et_add_schedule_contents"
        app:layout_constraintRight_toLeftOf="@id/btn_add_schedule_cancel"
        android:background="@drawable/button_second_background"
        android:textColor="@color/white"
        android:text="@string/ok"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/btn_add_schedule_cancel"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_add_schedule_contents"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_add_schedule"
        app:layout_constraintRight_toRightOf="@id/et_add_schedule_contents"
        android:background="@drawable/button_second_background"
        android:textColor="@color/white"
        android:text="@string/cancel"
        android:textSize="14sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>