<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_onboarding_start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/logo"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.4"/>

    <TextView
        android:id="@+id/logo_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/logo_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="25dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="#C88C84"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/logo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/logo_title_text"
        app:layout_constraintBottom_toBottomOf="@id/logo_title_text"
        app:layout_constraintLeft_toRightOf="@id/logo_title_text"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="24sp"
        android:text="@string/title_onboarding"/>

    <Button
        android:id="@+id/btn_onboarding_start"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.8"
        android:background="@drawable/custom_button_background"
        android:textColor="@color/white"
        android:text="@string/start"/>

</androidx.constraintlayout.widget.ConstraintLayout>