<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_search_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/et_search_email"
            android:layout_width="350dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_search_follower"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/custom_edittext"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:hint="@string/email" />

        <TextView
            android:id="@+id/tv_sign_up_id_explain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_search_email"
            app:layout_constraintLeft_toLeftOf="@id/et_search_email"
            android:layout_marginTop="2dp"
            android:textSize="12sp"
            android:textColor="@color/sign_up_explain_text_color"
            android:text="@string/sign_up_email_explain" />

        <Button
            android:id="@+id/btn_search_follower"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_search_email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_second_background"
            android:textColor="@color/white"
            android:text="@string/search_follower"
            android:textSize="16sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_add_follower"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_add_follower"
            android:layout_width="350dp"
            android:layout_height="70dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_add_follower"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:cardCornerRadius="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clipToPadding="true">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_add_follower_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/tv_add_follower_email"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/default_text_color"
                    android:text="test"/>

                <TextView
                    android:id="@+id/tv_add_follower_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_add_follower_id"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="@id/tv_add_follower_id"
                    android:text="aa@bb.com"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_add_follower"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cv_add_follower"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/cv_add_follower"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_second_background"
            android:textColor="@color/white"
            android:text="@string/add_follower"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/btn_cancel_add_follower"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cv_add_follower"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="@id/cv_add_follower"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_second_background"
            android:textColor="@color/white"
            android:text="@string/cancel"
            android:textSize="14sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar_add_follower"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>